# Virtual-Assistant

./: .gitignore  GP-VirtualAssistant.py  app.py  downloads_documents.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Virtual Assistant-checkpoint.ipynb  validation_assistant-checkpoint.ipynb
chroma_db_dir_Governace/: chroma.sqlite3
documents/: Data_Governance_2024.docx
functions/: load_documents.py  vectors_create.py
utils/: .env
