[tool.poetry]
name = "VIRTUAL-ASSISTANT"
version = "0.1.0"
description = "A chatbot with a local database on chroma, local LLM with llama 3 and Ollama and Langchain as a framework"
authors = ["Simon"]


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
langchain = "^0.1.17"
langchain-community = "^0.0.37"
PyMuPDF = "^1.24.2"
chromadb = "^0.5.0"
fastembed = "^0.2.7"
streamlit = "^1.25.0"
protobuf = "3.20.3"
sentence-transformers = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"